# spdr-assembler

./: .gitignore  Cargo.toml  readme.md  update-vm-dep.ps1
src/: assembler.rs  assembler_errors.rs  cli_integration.rs  compilation_helpers.rs  compilation_test.txt  config.toml  defered_patch.rs  error_printing.rs  interner.rs  language.md  main.rs  patch.rs  src_file.rs  symbol_table.rs  test_header.hd  test_tokens.txt
src/errors/: assembler_errors.rs  error_printer.rs  mod.rs
src/test/: assembler_tests.rs  basic_script_function.spdr  cli_tests.rs  error_printing_tests.rs  full_compilation_test.spdr  mod.rs  rellocation_tests.rs  spdr_error_test.spdr  symbol_table_tests.rs  test_external_script_function.hd  test_external_script_function.spdr  test_script_while_loop.spdr  test_tokens.spdr  tokenizer_tests.rs
src/tokenizer/: mod.rs  token.rs  tokenizer.rs
tests/: integration_test.rs
