[package]
name = "spdr-assembler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.12"
spdr_isa = {git = "https://github.com/Barca545/spdr_isa.git", rev = "cb2060c93b6fc7ea9195afb365e3ef0fe5946cbb"}
thiserror = "2.0.11"

[dev-dependencies]
# galaxy = {git = "https://github.com/Barca545/galaxy.git"}

[alias]