[package]
name = "spdr-assembler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.12"
thiserror = "2.0.11"
spdr-isa = {git = "https://github.com/Barca545/spdr-isa.git", rev = "97808963f20a30ec997ce2a96704c67051669da4"}

[dev-dependencies]
spdr-vm = {git = "https://github.com/Barca545/spdr-vm.git", rev = "bc0b8ef013548bbbf04d5bd1037b4fec413c334d"}
